--- a/src/app/listado-usuarios/listado-usuarios.component.html
+++ b/src/app/listado-usuarios/listado-usuarios.component.html
@@ -4,7 +4,19 @@
 
 <div class="main-content">
   <div class="container-fluid">
-
+    <div class="search-container col-md-12">
+      <label class="label"  for="nombreproductoFiltro">Buscar el nombre:</label>
+      <div class="search-box">
+        <input type="text" 
+        class="form-control"
+       
+      
+        [(ngModel)]="nombreproductoFiltro" (input)="aplicarFiltros()"  />
+       
+      </div>
+   
+      
+    </div>
 
     <div class="row">
 
@@ -12,7 +24,7 @@
 
         <div class="card">
           <div class="card-header card-header-danger">
-            <h4 class="card-title disabled"> <img src="assets/img/usuarios.png" alt=""> Usuarios</h4>
+            <h4 class="card-title disabled"> <img src="assets/img/usuarios.png" alt=""> Usuarios clientes</h4>
           </div>
           <div class="card-body">
             <div class="table-responsive">
@@ -44,7 +56,10 @@
                   </th>
 
                 </thead>
-                <tbody *ngFor="let item of usuariosss;let i=index ">
+                <tbody >
+                  <ng-container *ngFor="let item of usuariosss; let i = index">
+                    <ng-container *ngIf="(!nombreproductoFiltro || item.persona.nombre.toLowerCase().includes(nombreproductoFiltro.toLowerCase()))">
+  
                   <tr>
                     <td>
                       {{i+1}}
@@ -85,9 +100,24 @@
                     </td>
 
                   </tr>
+
+                       
+                </ng-container>
+              </ng-container>
                 </tbody>
               </table>
             </div>
+
+
+                <!-- Contenedor para centrar la paginación -->
+  <div class="pagination-containerrrr">
+    <!-- Paginación -->
+    <div class="pagination">
+      <button (click)="onPageChange(currentPage - 1)" [disabled]="currentPage === 1"><i  class="fa fa-arrow-left  "></i> Anterior</button>
+      <span class="k">Página {{ currentPage }} de {{ totalPages }}</span>
+      <button (click)="onPageChange(currentPage + 1)" [disabled]="currentPage === totalPages">Siguiente <i  class="fa fa-arrow-right"></i></button>
+    </div>
+  </div>
           </div>
         </div>
       </div>
