--- a/src/app/reporte-politecnico/reporte-politecnico.component.html
+++ b/src/app/reporte-politecnico/reporte-politecnico.component.html
@@ -1,190 +1,97 @@
 <div class="main-content">
-  <div class="container-fluid">
-      <div class="row">
-
-
-          <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="card card-stats">
-                  <div class="card-header card-header-warning card-header-icon">
-                      <div class="card-icon">
-                          <i class="material-icons">description</i>
-                      </div>
-                      <p class="card-category">Generar</p>
-                      <h3 class="card-title">Reporte de Producto
-                          <small>ESPAM MFL</small>
-                      </h3>
-                  </div>
-                  <div class="card-footer">
-                      <div class="stats">
-                          <i class="material-icons text-danger">play_arrow</i>
-                          <a href="javascript:void(0) " routerLink="/reportedeproducto">Generarlo </a>
-                      </div>
-                  </div>
+    <div class="container-fluid">
+      <!-- Primera fila -->
+      <div class="row justify-content-center">
+  
+        <!-- Primer bloque -->
+        <div class="col-lg-4 col-md-6 col-sm-6">
+          <div class="card card-stats">
+            <div class="card-header card-header-success card-header-icon">
+              <div class="card-icon">
+                <i class="material-icons">description</i>
               </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="card card-stats">
-                  <div class="card-header card-header-success card-header-icon">
-                      <div class="card-icon">
-                          <i class="material-icons">assignment_ind</i>
-                      </div>
-                      <p class="card-category">Generar </p>
-                      <h3 class="card-title">Listado de Usuarios
-                      <small>Administrador</small></h3>
-                  </div>
-                  <div class="card-footer">
-                      <div class="stats">
-                        <i class="material-icons text-danger">play_arrow</i>
-                      <!--   <a *ngIf="cuentaFija" href="javascript:void(0)" routerLink="/listadoUsuarios">Generarlo</a> -->
-
-                      </div>
-                  </div>
+              <p class="card-category">Generar</p>
+              <h3 class="card-title">Reporte de Producto
+                <small>RESTAURANTE HIGUERÓN</small>
+              </h3>
+            </div>
+            <div class="card-footer">
+              <div class="stats">
+                <i class="material-icons text-danger">play_arrow</i>
+                <a href="javascript:void(0)" routerLink="/reportedeproducto">Generarlo </a>
               </div>
+            </div>
           </div>
-
-
-          <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="card card-stats">
-                <div class="card-header card-header-danger card-header-icon">
-                    <div class="card-icon">
-                        <i class="material-icons">info_outline</i>
-                    </div>
-                    <p class="card-category">Fixed Issues</p>
-                    <h3 class="card-title">75</h3>
-                </div>
-                <div class="card-footer">
-                    <div class="stats">
-                        <i class="material-icons">local_offer</i> Tracked from Github
-                    </div>
-                </div>
-            </div>
         </div>
-
-        <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="card card-stats">
-                <div class="card-header card-header-info card-header-icon">
-                    <div class="card-icon">
-                        <i class="fa fa-twitter"></i>
-                    </div>
-                    <p class="card-category">Followers</p>
-                    <h3 class="card-title">+245</h3>
-                </div>
-                <div class="card-footer">
-                    <div class="stats">
-                        <i class="material-icons">update</i> Just Updated
-                    </div>
-                </div>
+  
+        <!-- Segundo bloque -->
+        <div class="col-lg-4 col-md-6 col-sm-6">
+          <div class="card card-stats">
+            <div class="card-header card-header-warning card-header-icon">
+              <div class="card-icon">
+                <i class="material-icons">attach_money</i>
+              </div>
+              <p class="card-category">Generar</p>
+              <h3 class="card-title">Reporte de Ingresos
+                <small>RESTAURANTE HIGUERÓN</small>
+              </h3>
             </div>
-        </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-          <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="card card-stats">
-                <div class="card-header card-header-secondary card-header-icon">
-                    <div class="card-icon">
-                        <i class="material-icons">assignment_ind</i>
-                    </div>
-                    <p class="card-category">Generar </p>
-                    <h3 class="card-title">Listado de Usuarios
-                    <small>Administrador</small></h3>
-                </div>
-                <div class="card-footer">
-                    <div class="stats">
-                      <i class="material-icons text-danger">play_arrow</i>
-                      <a href="javascript:void(0) " routerLink="/reportePolitecnico">Generarlo </a>
-                    </div>
-                </div>
+            <div class="card-footer">
+              <div class="stats">
+                <i class="material-icons text-danger">play_arrow</i>
+                <a href="javascript:void(0)" routerLink="/reportedeingresos">Generarlo </a>
+              </div>
             </div>
+          </div>
         </div>
-
-        <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="card card-stats">
-                <div class="card-header card-header-success card-header-icon">
-                    <div class="card-icon">
-                        <i class="material-icons">assignment_ind</i>
-                    </div>
-                    <p class="card-category">Generar </p>
-                    <h3 class="card-title">Listado de Usuarios
-                    <small>Administrador</small></h3>
-                </div>
-                <div class="card-footer">
-                    <div class="stats">
-                      <i class="material-icons text-danger">play_arrow</i>
-                      <a href="javascript:void(0) " routerLink="/reportePolitecnico">Generarlo </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="card card-stats">
-                <div class="card-header card-header-success card-header-icon">
-                    <div class="card-icon">
-                        <i class="material-icons">assignment_ind</i>
-                    </div>
-                    <p class="card-category">Generar </p>
-                    <h3 class="card-title">Listado de Usuarios
-                    <small>Administrador</small></h3>
-                </div>
-                <div class="card-footer">
-                    <div class="stats">
-                      <i class="material-icons text-danger">play_arrow</i>
-                      <a href="javascript:void(0) " routerLink="/reportePolitecnico">Generarlo </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="card card-stats">
-                <div class="card-header card-header-success card-header-icon">
-                    <div class="card-icon">
-                        <i class="material-icons">assignment_ind</i>
-                    </div>
-                    <p class="card-category">Generar </p>
-                    <h3 class="card-title">Listado de Usuarios
-                    <small>Administrador</small></h3>
-                </div>
-                <div class="card-footer">
-                    <div class="stats">
-                      <i class="material-icons text-danger">play_arrow</i>
-                      <a href="javascript:void(0) " routerLink="/reportePolitecnico">Generarlo </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-         
-        
+  
       </div>
-      <div class="row">
-          
-    
-         
-          
-          
+  
+      <!-- Segunda fila -->
+      <div class="row justify-content-center">
+  
+        <!-- Tercer bloque -->
+        <div class="col-lg-4 col-md-6 col-sm-6">
+          <div class="card card-stats">
+            <div class="card-header card-header-secondary card-header-icon">
+              <div class="card-icon">
+                <i class="material-icons">assignment_ind</i>
+              </div>
+              <p class="card-category">Generar </p>
+              <h3 class="card-title">Listado de Usuarios
+                <small>ADMINISTRADOR</small></h3>
+            </div>
+            <div class="card-footer">
+              <div class="stats">
+                <i class="material-icons text-danger">play_arrow</i>
+                <a routerLink="/listadodeadministradores">Generarlo </a>
+              </div>
+            </div>
+          </div>
+        </div>
+  
+        <!-- Cuarto bloque -->
+        <div class="col-lg-4 col-md-6 col-sm-6">
+          <div class="card card-stats">
+            <div class="card-header card-header-danger card-header-icon">
+              <div class="card-icon">
+                <i class="material-icons">assignment_ind</i>
+              </div>
+              <p class="card-category">Generar </p>
+              <h3 class="card-title">Listado de Usuarios
+                <small>CLIENTES POLITÉCNICOS</small></h3>
+            </div>
+            <div class="card-footer">
+              <div class="stats">
+                <i class="material-icons text-danger">play_arrow</i>
+                <a  routerLink="/listadodeclientes" >Generarlo </a>
+              </div>
+            </div>
+          </div>
+        </div>
+  
       </div>
-     
-      
-
-
-      
+  
+    </div>
   </div>
-
-</div>
+  
