--- a/src/app/credito/credito.component.html
+++ b/src/app/credito/credito.component.html
@@ -51,7 +51,7 @@
             <div class="form-group col-md-4">
               <div class="formmm3">
                 <div class="search-containerr">
-                  <label class="label" for="nombreFiltro">Buscar el nombre del plato:</label>
+                  <label class="label" for="nombreFiltro">Buscar el nombre del cliente:</label>
                   <div class="search-box">
                     <input type="text" class="form-control" [(ngModel)]="nombreFiltro" (input)="aplicarFiltros()" />
                   </div>
@@ -110,26 +110,26 @@
               />
               Créditos 
             </h4>
-         
-          
 
+      
 
-
-            <li class="nav-item dropdown">
-              <a class="nav-link  col" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  >
-                Descargar    <i class="material-icons">file_download</i> 
+          <li class="nav-item dropdown">
+            <a class="nav-link label2 col" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  >
+              Descargar    <i class="material-icons">file_download</i> 
+              
+                <p>
+                    <span class="d-lg-none d-md-block">Some Actions</span>
+                </p>
+            </a>
+            <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" (click)="descargarDatos()"  >Exportar a excel <img class="tamimg" src="/assets/img/microsoft-excel.svg" alt=""> </a>
+                <a class="dropdown-item" (click)="descargarPDF()"  > Exportar a pdf <i class="material-icons">picture_as_pdf</i></a>
+              
                 
-                  <p>
-                      <span class="d-lg-none d-md-block">Some Actions</span>
-                  </p>
-              </a>
-              <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" (click)="descargarDatos()" >Exportar a excel <img class="tamimg" src="/assets/img/microsoft-excel.svg" alt=""> </a>
-                  <a class="dropdown-item"(click)="descargarPDF()" > Exportar a pdf <i class="material-icons">picture_as_pdf</i></a>
-                
-                  
-              </div>
-          </li>
+            </div>
+        </li>
+
+
           </div>
           <div class="card-body">
             <div class="table-responsive">
