--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,186 +1,6 @@
 <div class="main-content">
   <div class="container-fluid">
-      <div class="row">
-
-
-          <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="card card-stats">
-                  <div class="card-header card-header-warning card-header-icon">
-                      <div class="card-icon">
-                          <i class="material-icons">description</i>
-                      </div>
-                      <p class="card-category">Generar</p>
-                      <h3 class="card-title">Reporte de Convenio
-                          <small>ESPAM MFL</small>
-                      </h3>
-                  </div>
-                  <div class="card-footer">
-                      <div class="stats">
-                          <i class="material-icons text-danger">play_arrow</i>
-                          <a href="javascript:void(0) " routerLink="/reportePolitecnico">Generarlo </a>
-                      </div>
-                  </div>
-              </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="card card-stats">
-                  <div class="card-header card-header-success card-header-icon">
-                      <div class="card-icon">
-                          <i class="material-icons">assignment_ind</i>
-                      </div>
-                      <p class="card-category">Generar </p>
-                      <h3 class="card-title">Listado de Usuarios
-                      <small>Administrador</small></h3>
-                  </div>
-                  <div class="card-footer">
-                      <div class="stats">
-                        <i class="material-icons text-danger">play_arrow</i>
-                        <a *ngIf="cuentaFija" href="javascript:void(0)" routerLink="/listadoUsuarios">Generarlo</a>
-
-                      </div>
-                  </div>
-              </div>
-          </div>
-
-
-          <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="card card-stats">
-                <div class="card-header card-header-danger card-header-icon">
-                    <div class="card-icon">
-                        <i class="material-icons">info_outline</i>
-                    </div>
-                    <p class="card-category">Fixed Issues</p>
-                    <h3 class="card-title">75</h3>
-                </div>
-                <div class="card-footer">
-                    <div class="stats">
-                        <i class="material-icons">local_offer</i> Tracked from Github
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="card card-stats">
-                <div class="card-header card-header-info card-header-icon">
-                    <div class="card-icon">
-                        <i class="fa fa-twitter"></i>
-                    </div>
-                    <p class="card-category">Followers</p>
-                    <h3 class="card-title">+245</h3>
-                </div>
-                <div class="card-footer">
-                    <div class="stats">
-                        <i class="material-icons">update</i> Just Updated
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-          <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="card card-stats">
-                <div class="card-header card-header-secondary card-header-icon">
-                    <div class="card-icon">
-                        <i class="material-icons">assignment_ind</i>
-                    </div>
-                    <p class="card-category">Generar </p>
-                    <h3 class="card-title">Listado de Usuarios
-                    <small>Administrador</small></h3>
-                </div>
-                <div class="card-footer">
-                    <div class="stats">
-                      <i class="material-icons text-danger">play_arrow</i>
-                      <a href="javascript:void(0) " routerLink="/reportePolitecnico">Generarlo </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="card card-stats">
-                <div class="card-header card-header-success card-header-icon">
-                    <div class="card-icon">
-                        <i class="material-icons">assignment_ind</i>
-                    </div>
-                    <p class="card-category">Generar </p>
-                    <h3 class="card-title">Listado de Usuarios
-                    <small>Administrador</small></h3>
-                </div>
-                <div class="card-footer">
-                    <div class="stats">
-                      <i class="material-icons text-danger">play_arrow</i>
-                      <a href="javascript:void(0) " routerLink="/reportePolitecnico">Generarlo </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="card card-stats">
-                <div class="card-header card-header-success card-header-icon">
-                    <div class="card-icon">
-                        <i class="material-icons">assignment_ind</i>
-                    </div>
-                    <p class="card-category">Generar </p>
-                    <h3 class="card-title">Listado de Usuarios
-                    <small>Administrador</small></h3>
-                </div>
-                <div class="card-footer">
-                    <div class="stats">
-                      <i class="material-icons text-danger">play_arrow</i>
-                      <a href="javascript:void(0) " routerLink="/reportePolitecnico">Generarlo </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="card card-stats">
-                <div class="card-header card-header-success card-header-icon">
-                    <div class="card-icon">
-                        <i class="material-icons">assignment_ind</i>
-                    </div>
-                    <p class="card-category">Generar </p>
-                    <h3 class="card-title">Listado de Usuarios
-                    <small>Administrador</small></h3>
-                </div>
-                <div class="card-footer">
-                    <div class="stats">
-                      <i class="material-icons text-danger">play_arrow</i>
-                      <a href="javascript:void(0) " routerLink="/reportePolitecnico">Generarlo </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-         
-        
-      </div>
-      <div class="row">
-          
-    
-         
-          
-          
-      </div>
-     
+     <img src="/assets/img/hotel.webp" alt="">
       
 
 
