--- a/src/app/ingredientes/ingredientes.component.scss
+++ b/src/app/ingredientes/ingredientes.component.scss
@@ -180,12 +180,24 @@ img {
     justify-content: center;
     align-items: center;
   }
-  .modal-dialog {
+ /*  .modal-dialog {
    
     display: flex;
     justify-content: center;
     align-items: center;
+  } */
+
+
+  .modal-dialog {
+    width: 100%;
+    height: 100%;
+    margin: 0;
   }
+  .modal-content {
+    max-height: 89vh; /* Ajusta el valor según sea necesario */
+   
+  }
+  
   .x {
   
     height: 80px;
@@ -292,7 +304,16 @@ img {
     text-align: center;
   }
   
-  
+  .formmmversion2 {
+    width: 300px;
+    }
+
+    .formmmversion3 {
+      width: 700px;
+      }
+
+
+
   .formmm {
     width: 910px;
     }
@@ -308,7 +329,11 @@ img {
     outline: none;
   }
   
-  
+  .labelversion2 {
+    font-size: 15px; /* Ajusta el tamaño de la fuente según tus preferencias */
+    margin-right: 25px;
+    color: rgb(141, 130, 130);
+  }
   /* Estilo para hacer la letra más grande en el label */
   .label {
     font-size: 18px; /* Ajusta el tamaño de la fuente según tus preferencias */
@@ -397,3 +422,56 @@ img {
     right: 10px;
   }
   
+
+
+
+  .selected {
+    font-weight: bold;
+    background-color: #dff0d8; /* Color de fondo de Bootstrap para éxito */
+  }.custom-select {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .option {
+    cursor: pointer;
+    margin-bottom: 5px;
+  }
+  
+  .nav-item {
+    list-style: none; /* Elimina el estilo de viñeta de la lista */
+    color: #ffffff;
+  }
+  .nav-link {
+    color: #ffffff;
+  }
+
+
+
+
+  .modal-body {
+    max-height: 70vh; /* Ajusta el valor según sea necesario */
+    overflow-y: auto;
+  }
+  .search-containerversion4 {
+    display: flex;
+  align-items: center;
+  }
+  
+  .label4 {
+    margin-right: 10px; /* Ajusta el margen derecho según sea necesario para el espacio deseado */
+  }
+  .table-bordered {
+    border: 1px solid #dee2e6; /* Cambia el color y el grosor según tus preferencias */
+    cursor: pointer;
+  }
+  .table-bordered .seleccionada {
+    background-color: #cf1f0067; /* Cambia el color según tus preferencias */
+  }
+  .form-check {
+cursor: pointer;  }
+.h3{
+  font-size: 15px;
+  color: #595757;
+}
+
