--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -449,3 +449,26 @@ header {
   top: 10px;
   right: 10px;
 }
+
+
+/* Estilo para los radio buttons y labels */
+input[type="radio"] {
+  margin-right: 10px; /* Ajusta este valor según sea necesario para dar espacio */
+}
+
+label[for="si"],
+label[for="no"] {
+  margin-right: 10px; /* Ajusta este valor según sea necesario para dar espacio */
+}
+.containerversion2{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center; 
+  background-color: #ffffff;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+  width: 990px;
+}
